fixed docs body spacing

--- a/client/src/Pages/Docs/Docs.module.scss
+++ b/client/src/Pages/Docs/Docs.module.scss
@@ -45,7 +45,7 @@
 
   overflow-x: auto;
   overflow-y: auto;
-  // margin-top: 5em;
+  margin-top: 5em;
   border-right: 1px solid #fff;
 
   transition: 0.3s left ease;
